# ethereal_rust_sdk

./: .gitignore  Cargo.toml  archive_openapi.json  makefile  openapi.json  openapi.json.bak  readme.md  shell.nix  ws_messages.json
.github/workflows/: common.yaml
audit/: README.md  benchmark_guide_en.md  code_analysis_en.md
audit/audit0/: benchmark_results_analysis_en.md  optimization_recommendations_en.md  performance_analysis_en.md
audit/audit1/: ethereal_rust_sdk_followup_audit_report.md  ethereal_rust_sdk_followup_audit_review_notes.md
benches/: connect_latency.rs  json_parsing.rs  serialization.rs  signing.rs  subscription_handling.rs
build_scripts/: patch_spec.py  post_processing.py  pre_processing.sh  readme.py  templates.py
data/: domain_config.rs
data/mainnet/: rpc_config.json
data/testnet/: rpc_config.json
examples/: collect_all_trades.rs  common.rs  fetch_positions.rs  l2_book.rs  linked_signer.rs  market_data.rs  market_data.rs.old  order_creation.rs  order_fills.rs  order_fills.rs.old  order_submission.rs  order_update.rs  order_updates.rs  order_updates.rs.old  orderbook_data.rs  orderbook_data.rs.old  sample_connection.rs  signing.rs  simple_order_submission.rs  subaccount_liquidation.rs  subaccount_liquidations.rs  trade_fill_data.rs  transfer_events.rs  transfer_events.rs.old
src/: async_client.rs  channels.rs  domain_config.rs  enums.rs  lib.rs  main.rs  routing.rs  signable_messages.rs  signing.rs  subscriptions.rs  types.rs  utils.rs  ws_client.rs
src/apis/: configuration.rs  funding_api.rs  linked_signer_api.rs  maintenance_api.rs  mod.rs  order_api.rs  points_api.rs  position_api.rs  product_api.rs  rate_limit_api.rs  referral_api.rs  rpc_api.rs  subaccount_api.rs  time_api.rs  token_api.rs  whitelist_api.rs
src/archive_apis/: configuration.rs  mod.rs  subaccount_archive_api.rs
src/archive_models/: bad_request_dto.rs  bad_request_dto_message.rs  balance_history_dto.rs  error_enum.rs  exchange_open_interest_history_dto.rs  exchange_volume_history_dto.rs  forbidden_dto.rs  forbidden_dto_error_enum.rs  mod.rs  not_found_dto.rs  not_found_dto_error_enum.rs  order_side.rs  order_type.rs  page_of_balance_history_dtos.rs  page_of_exchange_open_interest_history_dtos.rs  page_of_exchange_volume_history_dtos.rs  page_of_position_funding_history_dtos.rs  page_of_product_open_interest_history_dtos.rs  page_of_product_volume_history_dtos.rs  page_of_subaccount_volume_history_dtos.rs  page_of_unrealized_pnl_history_dtos.rs  position_funding_history_dto.rs  position_side_enum.rs  product_open_interest_history_dto.rs  product_volume_history_dto.rs  subaccount_volume_history_dto.rs  too_many_requests_dto.rs  too_many_requests_dto_error_enum.rs  total_exchange_volume_dto.rs  total_product_volume_dto.rs  total_product_volume_dtos.rs  total_subaccount_volume_dto.rs  unauthorized_dto.rs  unauthorized_dto_error_enum.rs  unprocessable_entity_dto.rs  unprocessable_entity_dto_error_enum.rs  unrealized_pnl_history_dto.rs
src/async_client/: client.rs  funding.rs  linked_signer.rs  maintenance.rs  mod.rs  order.rs  points.rs  position.rs  product.rs  rate_limit.rs  referral.rs  rpc.rs  subaccount.rs  subaccount_archive.rs  time.rs  token.rs  (+1 more)
tests/: common.rs  test_funding.rs  test_linked_signer.rs  test_maintenance.rs  test_order.rs  test_points.rs  test_position.rs  test_product.rs  test_rate_limit.rs  test_referral.rs  test_rpc.rs  test_simple_order.rs  test_subaccount.rs  test_subaccount_archive.rs  test_subscriptions.rs  test_time.rs  test_token.rs  test_trade_order_signing.rs  test_websockets.rs  test_whitelist.rs
(+227 files in other folders)
