[package]
name = "ethereal_rust_sdk"
version = "0.1.2"
edition = "2024"
description = "Trading client for Ethereal exchange"
repository = "https://github.com/8ball030/ethereal_rust_sdk"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1"

rust_socketio = "0.6.0"
reqwest = {version = "0.12.24", features = ["json"]}
url = "2.5.7"
uuid = { version = "1.19.0", features = ["serde"] }

simple_logger = "5.1.0"
log = "0.4.29"
anyhow = "1.0.100"

ethers = { version = "2.0.0", default-features = false, features = ["eip712"] }
ethers-contract-derive = "2.0"

dotenvy = "0.15.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "json_parsing"
harness = false

[[bench]]
name = "subscription_handling"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "connect_latency"
harness = false
