[package]
name = "ethereal_rust_sdk"
version = "0.1.23"
edition = "2018"
description = "Trading client for Ethereal exchange"
repository = "https://github.com/8ball030/ethereal_rust_sdk"
readme = "readme.md"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1"

reqwest = {version = "0.13.2", features = ["json", "query"]}
url = "2.5.7"
uuid = { version = "1.22.0", features = ["serde"] }

simple_logger = "5.1.0"
log = "0.4.29"
anyhow = "1.0.100"

ethers = { version = "2.0.0", default-features = false, features = ["eip712"] }
futures-util = "0.3.31"
tokio = { version = "1.50.0", features = ["sync", "rt-multi-thread", "macros"] }
rust_decimal = "1.27.0"
rust_decimal_macros = "1.40.0"
yawc = { version = "0.3.3", features = ["rustls-aws-lc-rs", "reqwest"] }
dashmap = "6.1.0"
bytes = "1.11.1"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "json_parsing"
harness = false

[[bench]]
name = "subscription_handling"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "connect_latency"
harness = false

[[bench]]
name = "signing"
harness = false
